# cmake-qml-plugin-example

./: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/my/plugin/example/: CMakeLists.txt  MyScript.js  plugin.qrc  qmldir
src/: main.cpp
src/qml/: main.qml
